# ai-interview

./: .cursorrules  .gitignore  1_polyglot-msa-grpc-optimization.md  2_k8s-node-pool-sizing.md  3_redis-streams-dual-write.md  4_sentence-token-buffering-latency.md  5_browser-offloading-resource-saving.md  CODE_ANALYSIS.md  PORTFOLIO_OVERVIEW.md  argocd-applicationset.yaml  argocd-infra-applicationset.yaml  argocd-project-app.yaml  argocd-project-infra.yaml  argocd-redis-applicationset.yaml  argocd-system-apps.yaml  bff_logs.txt  cluster.docker-desktop.yaml  core_logs.txt  docker_usage.txt  generate_greeting_v2.py  generate_intervene_audio.py  generate_intro_transition.py  test.md  unbrdn-snapshot.json
.github/: copilot-instructions.md
docs/: CHANGELOG.md  DEBUGGING.md  FAILURE_ANALYSIS.md  POD_CRASH_LOCAL_DIAGNOSIS.md  architecture-diagrams.md  architecture.md  architecture_big_picture.md  architecture_consolidated.md  argocd_helm_guide.md  argocd_operations.md  auth-token.md  backend_refactoring_plan.md  backend_refactoring_task.md  build-deploy-workflow.md  coding_convention.md  company-context-crawling.md  current_architecture_analysis.md  deployment-guide.md  design-decisions.md  devtool-stage-skipper.md  entity-mapping.md  environment-setup.md  environment-variables.md  error_handling_flow.md  gradle-build-profiles.md  https-setup.md  (+16 more)
services/document/: Dockerfile  config.py  main.py  pyproject.toml
services/document/engine/: embedding_engine.py  extraction_engine.py
services/document/service/: document_service.py  grpc_server.py
services/document/utils/: text_processor.py
services/infra/llm/: ARCHITECTURE.md  Dockerfile  Makefile  config.py  main.py  pyproject.toml  test_db.py
services/infra/llm/engine/: graph.py  llm_factory.py  nodes.py  openai_engine.py  prompts.py  report_engine.py
services/infra/llm/event/: redis_pub.py
services/infra/llm/interview/v1/: interview_pb2.py
services/infra/llm/prompts/: common.yaml  personalities.yaml  roles.yaml  stages.yaml
services/infra/llm/service/: grpc_handler.py
services/infra/storage/: ARCHITECTURE.md  Dockerfile  config.py  pyproject.toml
services/infra/storage/engine/: __init__.py  object_storage.py
services/infra/storage/event/: __init__.py  kafka_producer.py
services/infra/storage/service/: storage_service.py
services/infra/storage/service/worker/: __init__.py  history_sink.py  metadata_utils.py  queue_processor.py
services/infra/storage/utils/: log_format.py
services/infra/tts/: ARCHITECTURE.md  config.py  generate_greetings.py  generate_intro_audios.py  main.py  pyproject.toml
services/infra/tts/engine/: edge_tts_engine.py
services/infra/tts/event/: redis_client.py
services/infra/tts/service/: tts_service.py
services/infra/tts/service/worker/: tts_request_worker.py
services/llm/: ARCHITECTURE.md  Dockerfile  Makefile  config.py  llm_pb2.py  llm_pb2_grpc.py  main.py  pyproject.toml  test_llm_stream.py  tts_service.py
services/llm/document/v1/: document_pb2.py
services/llm/engine/: graph.py  nodes.py  prompts.py
services/llm/prompts/: common.yaml  personalities.yaml
services/llm/resume/v1/: resume_pb2.py
services/llm/service/: grpc_handler.py  tts_service.py
services/llm/stt/v1/: stt_pb2_grpc.py
services/llm/utils/: log_format.py
services/storage/: ARCHITECTURE.md  Dockerfile  config.py  main.py  pyproject.toml
services/storage/engine/: mongodb.py  object_storage.py
services/storage/event/: consumer.py
services/storage/service/: storage_service.py  storage_service_grpc.py
services/storage/service/worker/: queue_processor.py
services/storage/utils/: __init__.py
services/stt/: Dockerfile  Makefile  config.py  main.py  pyproject.toml  stt_pb2_grpc.py
services/stt/engine/whisper/: whisper_engine.py  whisper_stt.py
services/stt/event/: consumer.py  producer.py  redis_pub.py  redis_stream.py
services/stt/llm/v1/: llm_pb2.py
services/stt/service/: publisher.py  stt_service.py
services/stt/service/worker/: audio_request_worker.py  metadata_utils.py  postprocess.py  vad_engine.py
services/stt/storage/v1/: storage_pb2.py
services/stt/user/v1/: user_pb2.py
services/stt/utils/: audio_utils.py  log_format.py
(+1256 files in other folders)
