[project]
name = "stt-service"
version = "0.1.0"
description = "AI Interview STT Service (gRPC + FastAPI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.24.3",
    "scipy==1.13.0",
    "faster-whisper==1.1.0",
    "redis==5.0.1",
    "python-dotenv==1.0.0",
    "openai==1.12.0",
    "httpx==0.27.0",
    "requests==2.32.3",
    "websockets==12.0",
    "grpcio==1.62.0",
    "grpcio-tools==1.62.0",
    "grpcio-health-checking==1.62.0",
    "protobuf<5.0.0",
    "confluent-kafka==2.3.0",

]

[tool.uv]
package = false
